# task2

./: CMakeLists.txt  README.txt  task.txt
app/: CMakeLists.txt
app/src/: main.c
lib/: CMakeLists.txt
lib/include/: getopt.h  lib_main.h
lib/src/: getopt.c  lib_main.c
lib2/: CMakeLists.txt
